--- a/index.html
+++ b/index.html
@@ -93,34 +93,39 @@
     h1 {
       font-family: Arial, Helvetica, sans-serif;
     }
-  
-    /* Styles pour les images en vignettes */
-    .thumbnail {
-      width: 20%;
-      height: 20;
-      margin: 1px;
-      border: 5px solid #ffffff;
-      transition: transform 0.3s ease;
-    }
-  
-    @media (max-width: 100px) {
-      .thumbnail {
-        width: 48%;
-      }
-    }
-  
-    .thumbnail:hover {
-      transform: scale(1.1);
-    }
-  
-    a {
-      text-decoration: none;
-    }
-  
-    /* Style pour lightbox */
-    .lightbox img {
-      max-width: 100%;
-      height: auto;
+  /* Conteneur global pour centrer la galerie */
+.images {
+  display: flex;
+  flex-wrap: wrap; /* Permet aux images de passer à la ligne automatiquement */
+  justify-content: center; /* Centre horizontalement */
+  gap: 5px; /* Réduit l'espacement entre les images */
+  padding: 10px;
+}
+
+/* Styles pour les vignettes */
+.thumbnail {
+  width: 100px; /* Taille réduite des vignettes */
+  height: 100px; /* Taille réduite et forcée en carré */
+  object-fit: cover; /* Remplit le carré sans déformer */
+  border: 1px solid #ddd; /* Bordure légère */
+  border-radius: 5px; /* Légèrement arrondi */
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); /* Ombre subtile */
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+/* Animation au survol */
+.thumbnail:hover {
+  transform: scale(1.05); /* Zoom léger */
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); /* Ombre plus marquée */
+}
+
+/* Responsiveness */
+@media (max-width: 600px) {
+  .thumbnail {
+    width: 60px; /* Taille encore plus petite pour les petits écrans */
+    height: 60px;
+  }
+
     }
   </style>
   
